--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
-    "nodemailer": "^6.9.12"
+    "nodemailer": "^6.9.12",
+    "slugify": "^1.6.6" 
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
